--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "bull": "^4.16.5",
     "cloudinary": "^2.8.0",
@@ -35,12 +36,13 @@
     "mongoose": "^8.19.3",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "pdfkit": "^0.17.2",
     "razorpay": "^2.9.6",
     "redis": "^5.9.0",
     "socket.io": "^4.8.1",
     "stripe": "^19.2.0",
-    "twilio": "^5.10.4",
+    "twilio": "^5.10.5",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
     "xss-clean": "^0.1.4"
