--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "ioredis": "^5.8.2",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
+    "minimist": "^1.2.8",
     "moment": "^2.30.1",
     "mongoose": "^8.19.3",
     "morgan": "^1.10.1",
